--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-slackbot = "==0.5.4"
 "boto3" = "==1.10.16"
-pandas = "*"
+pandas = "==1.1.1"
 flask = "==1.1.2"
 slackeventsapi = "==2.2.1"
 slackclient = "==2.8.0"
+ibm-watson = "==4.5.0"
 
 [dev-packages]
 pytest = "*"
