--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 "boto3" = "==1.10.16"
 pandas = "==1.1.1"
 flask = "==1.1.2"
-slackeventsapi = "==2.2.1"
+slackeventsapi = {git = "https://github.com/sticker/python-slack-events-api.git", editable = true, ref = "feature/event-request"}
 slackclient = "==2.8.0"
 ibm-watson = "==4.5.0"
 
