NIFBOT-20 Watson Discoveryのクエリができるようにする

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ flask = "==1.1.2"
 slackeventsapi = {git = "https://github.com/sticker/python-slack-events-api.git", editable = true, ref = "feature/event-request"}
 slackclient = "==2.8.0"
 ibm-watson = "==4.5.0"
+ibm-cos-sdk = "==2.7.0"
 
 [dev-packages]
 pytest = "*"
