WatsonのAPIキーをSSMから取得できるようにする

--- a/copilot/nifbot-service/manifest.yml
+++ b/copilot/nifbot-service/manifest.yml
@@ -38,6 +38,8 @@ secrets:                      # Pass secrets from AWS Systems Manager (SSM) Para
 #  GITHUB_TOKEN: GITHUB_TOKEN  # The key is the name of the environment variable, the value is the name of the SSM parameter.
   SLACK_BOT_TOKEN: /nifbot/SLACK_BOT_TOKEN
   SLACK_SIGNING_SECRET: /nifbot/SLACK_SIGNING_SECRET
+  WATSON_ASSISTANT_API_KEY: /nifbot/WATSON_ASSISTANT_API_KEY
+  WATSON_DISCOVERY_API_KEY: /nifbot/WATSON_DISCOVERY_API_KEY
 
 
 # You can override any of the values defined above by environment.
